--- a/SemVer.Svn.MSBuild/SemVer.Svn.MSBuild.csproj
+++ b/SemVer.Svn.MSBuild/SemVer.Svn.MSBuild.csproj
@@ -66,7 +66,9 @@
     <None Include="..\SemVer.MSBuild\content\SemVer.MSBuild.props">
       <Link>content\SemVer.MSBuild.props</Link>
     </None>
-    <None Include="build\SemVer.Svn.MSBuild.targets" />
+    <None Include="build\SemVer.Svn.MSBuild.targets">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="BeforeBuild">
