--- a/SemVer.Svn.Fody/SemVer.Svn.Fody.csproj
+++ b/SemVer.Svn.Fody/SemVer.Svn.Fody.csproj
@@ -50,13 +50,6 @@
       <HintPath>..\packages\FodyCecil.1.29.4\lib\net40\Mono.Cecil.Rocks.dll</HintPath>
       <Private>False</Private>
     </Reference>
-    <Reference Include="SharpSvn, Version=1.9003.3829.100, Culture=neutral, PublicKeyToken=d729672594885a28, processorArchitecture=x86">
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="SharpSvn.UI, Version=1.9003.3829.100, Culture=neutral, PublicKeyToken=33789aa53ca44aa9, processorArchitecture=MSIL">
-      <HintPath>..\packages\SharpSvn.1.9-x86.1.9003.3829.100\lib\net40\SharpSvn.UI.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -66,16 +59,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ModuleWeaver.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="..\packages\SharpSvn.1.9-x86.1.9003.3829.100\lib\net40\SharpPlink-Win32.svnExe">
-      <Link>SharpPlink-Win32.svnExe</Link>
+    <None Include="..\SemVer.MSBuild\build\SemVer.MSBuild.targets">
+      <Link>build\SemVer.MSBuild.targets</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="..\packages\SharpSvn.1.9-x86.1.9003.3829.100\lib\net40\SharpSvn-DB44-20-win32.svnDll">
-      <Link>SharpSvn-DB44-20-win32.svnDll</Link>
+    <None Include="build\SemVer.Svn.Fody.targets">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="ILMerge.props">
@@ -84,10 +75,6 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="..\packages\SharpSvn.1.9-x86.1.9003.3829.100\lib\net40\SharpSvn.dll">
-      <Link>SharpSvn.dll</Link>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
     <Content Include="FodyWeavers.xml" />
     <Content Include="ILMergeOrder.txt" />
   </ItemGroup>
@@ -96,14 +83,17 @@
       <Project>{b9087e54-c162-48d5-b8a6-699947cca112}</Project>
       <Name>SemVer.Fody</Name>
     </ProjectReference>
-    <ProjectReference Include="..\SemVer.Stamp.Svn\SemVer.Stamp.Svn.csproj">
-      <Project>{bc16772e-21f8-451f-9b16-b65bf5c289a1}</Project>
-      <Name>SemVer.Stamp.Svn</Name>
+    <ProjectReference Include="..\SemVer.MSBuild\SemVer.MSBuild.csproj">
+      <Project>{2c7a1440-5126-40c1-92b7-fbc203090462}</Project>
+      <Name>SemVer.MSBuild</Name>
     </ProjectReference>
     <ProjectReference Include="..\SemVer.Stamp\SemVer.Stamp.csproj">
       <Project>{44d81acc-4145-4220-88c3-dd5d8fe7fb81}</Project>
       <Name>SemVer.Stamp</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="BeforeBuild">
