--- a/SemVer.Git.Fody.nupkg/SemVer.Git.Fody.nupkg.csproj
+++ b/SemVer.Git.Fody.nupkg/SemVer.Git.Fody.nupkg.csproj
@@ -49,7 +49,12 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="build\SemVer.Git.Fody.targets" />
+    <None Include="..\SemVer.Git.Fody\build\SemVer.Git.Fody.targets">
+      <Link>content\SemVer.Git.Fody.targets</Link>
+    </None>
+    <None Include="..\SemVer.MSBuild\build\SemVer.MSBuild.targets">
+      <Link>build\SemVer.MSBuild.targets</Link>
+    </None>
     <None Include="NuGetPackage.ps1" />
     <None Include="NuGetSetup.ps1" />
     <None Include="NuGet.exe" />
@@ -60,13 +65,13 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
-    <ProjectReference Include="..\SemVer.Git.Fody.Console\SemVer.Git.Fody.Console.csproj">
-      <Project>{486b6663-a23b-4c7e-8738-74fd130dd823}</Project>
-      <Name>SemVer.Git.Fody.Console</Name>
-    </ProjectReference>
     <ProjectReference Include="..\SemVer.Git.Fody\SemVer.Git.Fody.csproj">
       <Project>{9674aaf9-2107-4bb6-9f93-129c2021296e}</Project>
       <Name>SemVer.Git.Fody</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\SemVer.Git.MSBuild\SemVer.Git.MSBuild.csproj">
+      <Project>{5cb5c952-2a7d-4847-bb5d-d34f51ca97a7}</Project>
+      <Name>SemVer.Git.MSBuild</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
