--- a/SemVer.Git.Fody.nupkg/Package.nuspec
+++ b/SemVer.Git.Fody.nupkg/Package.nuspec
@@ -3,7 +3,7 @@
 <package>
   <metadata>
     <id>SemVer.Git.Fody</id>
-    <version>1.2.2</version>
+    <version>1.3.0-alpha00</version>
     <title>SemVer.Git.Fody</title>
     <authors>Andreas Niedermair</authors>
     <description>
@@ -19,17 +19,12 @@
     </dependencies>
   </metadata>
   <files>
-    <file src="..\bin\SemVer.Git.Fody.dll"
-          target="" />
-    <file src="..\tools\verpatch.exe"
-          target="" />
-    <file src="..\bin\NativeBinaries\amd64\git2-785d8c4.dll"
-          target="NativeBinaries\amd64" />
-    <file src="..\bin\NativeBinaries\x86\git2-785d8c4.dll"
-          target="NativeBinaries\x86" />
-    <file src="..\bin\SemVer.Git.Fody.Console.exe"
-          target="" />
-    <file src="build\"
-          target="build" />
+    <files>
+      <file src="..\bin\SemVer.Svn.Fody\"
+            exclude="**\*.pdb;**\*.xml"
+            target="" />
+      <file src="..\bin\SemVer.Svn.MSBuild\**\*.dll"
+            target="tools" />
+    </files>
   </files>
 </package>
