--- a/SemVer.Svn.Fody.nupkg/Package.nuspec
+++ b/SemVer.Svn.Fody.nupkg/Package.nuspec
@@ -3,7 +3,7 @@
 <package>
   <metadata>
     <id>SemVer.Svn.Fody</id>
-    <version>1.2.3</version>
+    <version>1.3.0-alpha00</version>
     <title>SemVer.Svn.Fody</title>
     <authors>Andreas Niedermair</authors>
     <description>
