--- a/SemVer.Svn.MSBuild/SemVer.MSBuild.props
+++ b/SemVer.Svn.MSBuild/SemVer.MSBuild.props
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
-    <BaseRevision></BaseRevision>
+    <BaseRevision>0428c901d9447b47edd2e1d8e5f03ffef1e09871</BaseRevision>
     <BaseVersion>1.1.0</BaseVersion>
     <BreakingChangeFormat>^perf(\(.*\))*: </BreakingChangeFormat>
     <FeatureFormat>^feat(\(.*\))*: </FeatureFormat>
