--- a/SemVer.Git.Fody.nupkg/Package.nuspec
+++ b/SemVer.Git.Fody.nupkg/Package.nuspec
@@ -19,10 +19,10 @@
     </dependencies>
   </metadata>
   <files>
-    <file src="..\bin\SemVer.Svn.Fody\"
+    <file src="..\bin\SemVer.Git.Fody\"
           exclude="**\*.pdb;**\*.xml"
           target="" />
-    <file src="..\bin\SemVer.Svn.MSBuild\**\*.dll"
+    <file src="..\bin\SemVer.Git.MSBuild\**\*.dll"
           target="tools" />
   </files>
 </package>
