--- a/SemVer.Git.MSBuild.nupkg/SemVer.Git.MSBuild.nupkg.csproj
+++ b/SemVer.Git.MSBuild.nupkg/SemVer.Git.MSBuild.nupkg.csproj
@@ -49,13 +49,13 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="..\bin\SemVer.Git.MSBuild\build\SemVer.Git.MSBuild.targets">
+    <None Include="..\SemVer.Git.MSBuild\build\SemVer.Git.MSBuild.targets">
       <Link>build\SemVer.Git.MSBuild.targets</Link>
     </None>
-    <None Include="..\bin\SemVer.Git.MSBuild\build\SemVer.MSBuild.targets">
+    <None Include="..\SemVer.MSBuild\build\SemVer.MSBuild.targets">
       <Link>build\SemVer.MSBuild.targets</Link>
     </None>
-    <None Include="..\bin\SemVer.Git.MSBuild\content\SemVer.MSBuild.props">
+    <None Include="..\SemVer.MSBuild\content\SemVer.MSBuild.props">
       <Link>content\SemVer.MSBuild.props</Link>
     </None>
     <None Include="NuGetPackage.ps1" />
