--- a/SemVer.Svn.MSBuild/packages.config
+++ b/SemVer.Svn.MSBuild/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="SemVer.Git.MSBuild" version="1.0.0-alpha07" targetFramework="net40" />
+  <package id="SharpSvn.1.9-x86" version="1.9003.3829.100" targetFramework="net40" />
 </packages>
