adapted nuspec of SemVer.Svn.MSBuild

--- a/SemVer.Svn.MSBuild.nupkg/Package.nuspec
+++ b/SemVer.Svn.MSBuild.nupkg/Package.nuspec
@@ -13,7 +13,12 @@
     <licenseUrl>https://raw.githubusercontent.com/dittodhole/WTFNMFPLv3/master/LICENSE</licenseUrl>
   </metadata>
   <files>
+    <file src="..\bin\SemVer.Svn.MSBuild\**\*.svnExe"
+          target="tools" />
+    <file src="..\bin\SemVer.Svn.MSBuild\**\*.svnDll"
+          target="tools" />
     <file src="..\bin\SemVer.Svn.MSBuild\**\*.dll"
+          exclude="SharpSvn.UI.dll"
           target="tools" />
     <file src="..\bin\SemVer.Svn.MSBuild\**\*.targets"
           target="" />
