--- a/SemVer.Git.Fody.nupkg/Package.nuspec
+++ b/SemVer.Git.Fody.nupkg/Package.nuspec
@@ -3,7 +3,7 @@
 <package>
   <metadata>
     <id>SemVer.Git.Fody</id>
-    <version>1.3.0-alpha04</version>
+    <version>1.3.0</version>
     <title>SemVer.Git.Fody</title>
     <authors>Andreas Niedermair</authors>
     <description>
