--- a/SemVer.Svn.MSBuild.nupkg/Package.nuspec
+++ b/SemVer.Svn.MSBuild.nupkg/Package.nuspec
@@ -6,7 +6,7 @@
     <title>SemVer.Svn.MSBuild</title>
     <authors>Andreas Niedermair</authors>
     <description>
-      GALORE
+      Versions your assemblies according to SemVer based on your SVN commit messages.
     </description>
     <projectUrl>https://github.com/dittodhole/dotnet-SemVer.Stamp</projectUrl>
     <iconUrl>https://raw.githubusercontent.com/dittodhole/dotnet-SemVer.Stamp/master/Icons/package_icon.png</iconUrl>
