restructured MSBuild .targets-files

--- a/SemVer.MSBuild/content/SemVer.MSBuild.props
+++ b/SemVer.MSBuild/content/SemVer.MSBuild.props
@@ -7,5 +7,6 @@
     <FeatureFormat>^feat(\(.*\))*: </FeatureFormat>
     <PatchFormat>^fix(\(.*\))*: </PatchFormat>
     <RepositoryPath>$(ProjectDir)</RepositoryPath>
+    <SemVerStampActive>True</SemVerStampActive>
   </PropertyGroup>
 </Project>
