--- a/SemVer.Git.MSBuild.nupkg/Package.nuspec
+++ b/SemVer.Git.MSBuild.nupkg/Package.nuspec
@@ -9,6 +9,7 @@
     <projectUrl>https://github.com/dittodhole/dotnet-SemVer.Stamp</projectUrl>
     <iconUrl>https://raw.githubusercontent.com/dittodhole/dotnet-SemVer.Stamp/master/Icons/package_icon.png</iconUrl>
     <licenseUrl>https://raw.githubusercontent.com/dittodhole/WTFNMFPLv3/master/LICENSE</licenseUrl>
+    <tags>Git, Versioning, MSBuild, Stamp</tags>
     <developmentDependency>true</developmentDependency>
   </metadata>
   <files>
