--- a/src/SemVer.Git.MSBuild/packages.config
+++ b/src/SemVer.Git.MSBuild/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="LibGit2Sharp" version="0.24.0" targetFramework="net40" />
   <package id="LibGit2Sharp.NativeBinaries" version="1.0.185" targetFramework="net40" />
+  <package id="NDepend.Path" version="1.0.0" targetFramework="net40" />
 </packages>
