--- a/src/SemVer.Svn.MSBuild/SemVer.Svn.MSBuild.csproj
+++ b/src/SemVer.Svn.MSBuild/SemVer.Svn.MSBuild.csproj
@@ -66,9 +66,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SvnCommitMessageProvider.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="content\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <None Include="build\SemVer.Svn.MSBuild.targets">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
