adapted AssemblyInfo (for nuget)

--- a/src/SemVer.Svn.MSBuild/SemVer.Svn.MSBuild.csproj
+++ b/src/SemVer.Svn.MSBuild/SemVer.Svn.MSBuild.csproj
@@ -72,6 +72,7 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="packages.config" />
+    <None Include="SemVer.Svn.MSBuild.nuspec" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
