--- a/src/SemVer.Svn.MSBuild/packages.config
+++ b/src/SemVer.Svn.MSBuild/packages.config
@@ -1,4 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="SharpSvn.1.9-x86" version="1.9005.3957.231" targetFramework="net40" />
+  <package id="SharpSvn.1.9-x86" version="1.9005.3957.231" targetFramework="net40" developmentDependency="true" />
 </packages>
