--- a/src/SemVer.Git.MSBuild/packages.config
+++ b/src/SemVer.Git.MSBuild/packages.config
@@ -3,4 +3,5 @@
   <package id="LibGit2Sharp" version="0.24.0" targetFramework="net40" developmentDependency="true" />
   <package id="LibGit2Sharp.NativeBinaries" version="1.0.185" targetFramework="net40" developmentDependency="true" />
   <package id="NDepend.Path" version="1.0.0" targetFramework="net40" developmentDependency="true" />
+  <package id="Source.JetBrains.Annotations" version="11.1.0" targetFramework="net40" developmentDependency="true" />
 </packages>
