--- a/src/SemVer.Svn.MSBuild/SemVer.Svn.MSBuild.csproj
+++ b/src/SemVer.Svn.MSBuild/SemVer.Svn.MSBuild.csproj
@@ -62,6 +62,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="App_Packages\Source.JetBrains.Annotations_11.1.0\JetBrains.Annotations.cs" />
     <Compile Include="SemVerStampTask.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SvnCommitMessageProvider.cs" />
